--- a/src/main/resources/fxml/LoginAs.fxml
+++ b/src/main/resources/fxml/LoginAs.fxml
@@ -1,110 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.LoginAsController">
+<AnchorPane id="anchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="660.0" style="-fx-background-color: #fff;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.LoginAsController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="660.0" style="-fx-background-color: #fff;">
+      <VBox id="vbox" alignment="CENTER" layoutX="3.0" layoutY="175.0" prefHeight="263.0" prefWidth="660.0" spacing="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <ImageView fitHeight="457.0" fitWidth="660.0" opacity="0.88" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../static/images/bg.jpg" />
-               </image>
-            </ImageView>
-            <Pane layoutX="285.0" layoutY="172.0" prefHeight="46.0" prefWidth="337.0" style="-fx-background-color: 000000bcjHDB; -fx-background-radius: 0 8px 8px 0; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+            <HBox alignment="CENTER" prefHeight="126.0" prefWidth="591.0" spacing="50.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Circle fill="#00154f" layoutX="69.0" layoutY="62.0" radius="55.0" stroke="#00154f" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-                  <ImageView fitHeight="60.0" fitWidth="69.0" layoutX="39.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../static/PNG@2_white_icons/icons8_student_male_128px.png" />
-                     </image>
-                     <effect>
-                        <DropShadow spread="0.3" />
-                     </effect>
-                  </ImageView>
+                  <Pane prefHeight="121.0" prefWidth="119.0" style="-fx-background-color: #00154f; -fx-background-radius: 50%; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0) dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                     <children>
+                        <ImageView fitHeight="77.0" fitWidth="142.0" layoutX="21.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../static/PNG@2_white_icons/icons8_admin_settings_male_240px.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="121.0" prefWidth="119.0" style="-fx-background-color: #00154f; -fx-background-radius: 50%; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0) dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                     <children>
+                        <ImageView fitHeight="60.0" fitWidth="69.0" layoutX="30.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../static/PNG@2_white_icons/icons8_student_male_128px.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="121.0" prefWidth="119.0" style="-fx-background-color: #00154f; -fx-background-radius: 50%; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0) dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                     <children>
+                        <ImageView fitHeight="69.0" fitWidth="82.0" layoutX="25.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../static/PNG@2_white_icons/icons8_tuition_240px.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
                </children>
-            </Pane>
-            <Circle fill="#00154f" layoutX="155.0" layoutY="237.0" radius="55.0" stroke="#00154f" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-            <Button fx:id="btn_admin" layoutX="110.0" layoutY="323.0" mnemonicParsing="false" onAction="#loginAdmin" prefHeight="30.0" prefWidth="91.0" style="-fx-background-color: #ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="Admin" textFill="WHITE">
-               <font>
-                  <Font name="Arial Bold" size="13.0" />
-               </font>
-            </Button>
-            <Button layoutX="311.0" layoutY="323.0" mnemonicParsing="false" onAction="#loginStudent" prefHeight="30.0" prefWidth="91.0" style="-fx-background-color: #ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="Student" textFill="WHITE">
-               <font>
-                  <Font name="Arial Bold" size="13.0" />
-               </font>
-            </Button>
-            <Button layoutX="491.0" layoutY="323.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="91.0" style="-fx-background-color: #ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="Professor" textFill="WHITE">
-               <font>
-                  <Font name="Arial Bold" size="13.0" />
-               </font>
-            </Button>
-            <Pane layoutY="30.0" prefHeight="83.0" prefWidth="672.0" style="-fx-background-color: #092a520245f;">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="21.0" prefWidth="425.0" spacing="80.0" VBox.vgrow="ALWAYS">
                <children>
-                  <ImageView fitHeight="125.0" fitWidth="234.0" layoutX="233.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../static/images/ss.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-            <Circle fill="#00154f" layoutX="536.0" layoutY="237.0" radius="55.0" stroke="#00154f" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-            <ImageView fitHeight="69.0" fitWidth="82.0" layoutX="502.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../static/PNG@2_white_icons/icons8_tuition_240px.png" />
-               </image>
-               <effect>
-                  <DropShadow spread="0.3" />
-               </effect>
-            </ImageView>
-            <ImageView fitHeight="77.0" fitWidth="69.0" layoutX="121.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../static/PNG@2_white_icons/icons8_admin_settings_male_240px.png" />
-               </image>
-               <effect>
-                  <DropShadow spread="0.3" />
-               </effect>
-            </ImageView>
-            <Pane layoutY="100.0" prefHeight="46.0" prefWidth="200.0" style="-fx-background-color: #ff4007; -fx-background-radius: 0 10 10 0; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
-               <children>
-                  <Label layoutX="81.0" layoutY="10.0" text="Login As" textFill="WHITE">
+                  <Button fx:id="btn_admin" mnemonicParsing="false" onAction="#loginAdmin" prefHeight="30.0" prefWidth="91.0" style="-fx-background-color: #ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="Admin" textFill="WHITE">
                      <font>
-                        <Font name="Arial Bold" size="22.0" />
+                        <Font name="Arial Bold" size="13.0" />
                      </font>
-                  </Label>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="btn_student" mnemonicParsing="false" onAction="#loginStudent" prefHeight="30.0" prefWidth="91.0" style="-fx-background-color: #ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="Student" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="13.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="91.0" style="-fx-background-color: #ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="Professor" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="13.0" />
+                     </font>
+                  </Button>
                </children>
-            </Pane>
-            <Label layoutX="6.0" layoutY="409.0" prefHeight="17.0" prefWidth="143.0" text="© SmartSchool 2021" textFill="#ff3d0860" />
-            <Pane layoutX="591.0" layoutY="384.0" prefHeight="54.0" prefWidth="69.0" styleClass="panes" stylesheets="@../css/style.css">
-               <children>
-                  <Circle fill="#ff4007" layoutX="35.0" layoutY="27.0" radius="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-                  <ImageView fitHeight="26.0" fitWidth="22.0" layoutX="24.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../static/PNG@2_white_icons/icons8_shutdown_52px.png" />
-                     </image>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                  </ImageView>
-               </children>
-            </Pane>
+               <padding>
+                  <Insets left="30.0" right="25.0" />
+               </padding>
+            </HBox>
          </children>
-      </AnchorPane>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+      </VBox>
+      <Pane layoutY="114.0" prefHeight="46.0" prefWidth="200.0" style="-fx-background-color: #ff4007; -fx-background-radius: 0 10 10 0; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" AnchorPane.leftAnchor="0.0">
+         <children>
+            <Label layoutX="81.0" layoutY="10.0" text="Login As" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <HBox alignment="CENTER" layoutX="4.0" prefHeight="99.0" prefWidth="652.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0">
+         <children>
+            <ImageView id="logo" fitHeight="93.0" fitWidth="208.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../static/images/ss.png" />
+               </image>
+            </ImageView>
+         </children>
+      </HBox>
+      <Button layoutX="615.0" layoutY="397.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #ff4007; -fx-background-radius: 50; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="exit-btn" stylesheets="@../css/style.css" textFill="#ff4007" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="13.0" />
+      <ImageView fitHeight="26.0" fitWidth="23.0" layoutX="616.0" layoutY="398.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="21.0">
+         <image>
+            <Image url="@../static/PNG@2_white_icons/icons8_shutdown_52px.png" />
+         </image>
+      </ImageView>
    </children>
-</HBox>
+</AnchorPane>
