--- a/src/main/resources/fxml/HomeStudent.fxml
+++ b/src/main/resources/fxml/HomeStudent.fxml
@@ -12,13 +12,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e4e4e4;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.HomeStudentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.HomeStudentController">
    <children>
-      <VBox alignment="CENTER" layoutX="81.0" layoutY="84.0" prefHeight="298.0" prefWidth="552.0" AnchorPane.leftAnchor="81.0" AnchorPane.rightAnchor="-1.0">
+      <Pane layoutX="387.0" prefHeight="68.0" prefWidth="245.0" style="-fx-background-radius: 20 0 0 0;" styleClass="linear-grad" stylesheets="@../css/style.css" AnchorPane.leftAnchor="387.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="68.0" layoutY="84.0" prefHeight="289.0" prefWidth="536.0">
+            <Label fx:id="studentLogin" alignment="CENTER" contentDisplay="CENTER" layoutY="11.0" opacity="0.9" prefHeight="34.0" prefWidth="181.0" style="-fx-background-radius: 30px;" textFill="WHITE">
+               <font>
+                  <Font name="Arial" size="22.0" />
+               </font>
+            </Label>
+            <Pane fx:id="loginPane" layoutX="213.0" layoutY="19.0" prefHeight="18.0" prefWidth="18.0" />
+         </children>
+      </Pane>
+      <VBox alignment="CENTER" layoutX="69.0" layoutY="49.0" prefHeight="347.0" prefWidth="562.0" AnchorPane.leftAnchor="69.0" AnchorPane.rightAnchor="1.0">
+         <children>
+            <AnchorPane layoutX="68.0" layoutY="84.0" prefHeight="331.0" prefWidth="567.0" style="-fx-background-color: #e4e4e4; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0); -fx-background-radius: 20 0 0 20;">
                <children>
-                  <Pane layoutX="-3.0" layoutY="25.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="32.0" layoutY="39.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutX="-1.0" layoutY="-3.0" prefHeight="96.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
@@ -39,7 +49,7 @@
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="-2.0" layoutY="157.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="32.0" layoutY="171.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutY="-5.0" prefHeight="99.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
@@ -60,7 +70,7 @@
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="172.0" layoutY="25.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="207.0" layoutY="39.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutX="-1.0" layoutY="-4.0" prefHeight="98.0" prefWidth="40.0" style="-fx-background-color: b72801;">
                            <children>
@@ -81,7 +91,7 @@
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="171.0" layoutY="158.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="207.0" layoutY="176.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutX="-2.0" layoutY="-5.0" prefHeight="100.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
@@ -102,7 +112,7 @@
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="348.0" layoutY="25.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="376.0" layoutY="39.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutY="-4.0" prefHeight="99.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
@@ -123,7 +133,7 @@
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="349.0" layoutY="157.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="376.0" layoutY="171.0" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutX="-1.0" layoutY="-4.0" prefHeight="98.0" prefWidth="40.0" style="-fx-background-color: #b72801;">
                            <children>
@@ -239,7 +249,7 @@
                   <Pane layoutX="1.0" layoutY="352.0" prefHeight="49.0" prefWidth="49.0" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Button layoutX="10.0" layoutY="14.0" mnemonicParsing="false" onAction="#logout" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: ff4007; -fx-background-radius: 50; -fx-effect: dropshadow(three-pass-box, rgba(220,210,210,0.8), 10, 0, 0, 0);" textFill="#ff4007" />
-                        <ImageView fitHeight="18.0" fitWidth="27.0" layoutX="16.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="18.0" fitWidth="27.0" layoutX="16.0" layoutY="20.0" onMouseClicked="#logout1" pickOnBounds="true" preserveRatio="true">
                            <effect>
                               <DropShadow />
                            </effect>
@@ -256,19 +266,14 @@
             </Pane>
          </children>
       </HBox>
-      <HBox alignment="CENTER" layoutX="49.0" layoutY="14.0" prefHeight="68.0" prefWidth="585.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="-2.0">
+      <HBox layoutX="49.0" prefHeight="68.0" prefWidth="320.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="263.0">
          <children>
-            <ImageView fitHeight="77.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="48.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../static/images/ss.png" />
                </image>
             </ImageView>
          </children>
       </HBox>
-      <Label fx:id="studentLogin" alignment="CENTER" contentDisplay="CENTER" layoutX="475.0" layoutY="368.0" opacity="0.9" prefHeight="34.0" prefWidth="150.0" style="-fx-background-color: rgba(255,130,0, 0.4); -fx-background-radius: 30px;" textFill="WHITE">
-         <font>
-            <Font name="Arial" size="22.0" />
-         </font>
-      </Label>
    </children>
 </AnchorPane>
