--- a/src/main/resources/fxml/HomeAdmin.fxml
+++ b/src/main/resources/fxml/HomeAdmin.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.HomeStudentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.HomeAdminController">
    <children>
       <Pane layoutX="387.0" prefHeight="68.0" prefWidth="245.0" style="-fx-background-radius: 20 0 0 0;" styleClass="linear-grad" stylesheets="@../css/style.css" AnchorPane.leftAnchor="387.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="studentLogin" alignment="CENTER" contentDisplay="CENTER" layoutY="11.0" opacity="0.9" prefHeight="34.0" prefWidth="181.0" style="-fx-background-radius: 30px;" textFill="WHITE">
+            <Label fx:id="studentLogin" alignment="CENTER" contentDisplay="CENTER" layoutY="11.0" opacity="0.9" prefHeight="34.0" prefWidth="181.0" style="-fx-background-radius: 30px;" text="Admin" textFill="WHITE">
                <font>
                   <Font name="Arial" size="22.0" />
                </font>
@@ -70,7 +70,7 @@
                         </Text>
                      </children>
                   </Pane>
-                  <Pane layoutX="207.0" layoutY="39.0" onMouseClicked="#goNotices" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
+                  <Pane layoutX="207.0" layoutY="39.0" onMouseClicked="#goMainNotice" prefHeight="90.0" prefWidth="150.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                      <children>
                         <Pane layoutX="-1.0" layoutY="-4.0" prefHeight="98.0" prefWidth="40.0" style="-fx-background-color: b72801;">
                            <children>
