--- a/src/main/resources/fxml/NoticeAdmin.fxml
+++ b/src/main/resources/fxml/NoticeAdmin.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -16,17 +17,17 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="632.0" style="-fx-background-color: #e3e3e3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.NoticeAdminController">
    <children>
       <Line endX="103.0" layoutX="424.0" layoutY="40.0" startX="-374.3999938964844" startY="7.62939453125E-6" stroke="#ff4007" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-      <Button layoutX="538.0" layoutY="368.0" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="74.0" style="-fx-background-color: #00154f; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="Ajouter" textFill="WHITE">
+      <Button layoutX="556.0" layoutY="369.0" mnemonicParsing="false" onAction="#add" prefHeight="30.0" prefWidth="66.0" style="-fx-background-color: #00154f; -fx-background-radius: 5 5 5 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="    Add" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <TextField fx:id="title" focusTraversable="false" layoutX="70.0" layoutY="88.0" promptText="Titre" style="-fx-background-radius: 15; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-      <Pane layoutX="592.0" layoutY="10.0" prefHeight="60.0" prefWidth="40.0" style="-fx-background-color: b72801; -fx-background-radius: 8 0 0 8;">
+      <TextField fx:id="title" focusTraversable="false" layoutX="70.0" layoutY="89.0" promptText="Title" style="-fx-background-radius: 15; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+      <Pane layoutX="592.0" layoutY="10.0" prefHeight="60.0" prefWidth="40.0" style="-fx-background-color: b72801; -fx-background-radius: 10 0 0 10;">
          <children>
             <Pane layoutX="-65.0" layoutY="10.0" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0); -fx-background-radius: 5 0 0 5;" styleClass="panes" stylesheets="@../css/style.css">
                <children>
-                  <Text fill="WHITE" layoutX="32.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Avis">
+                  <Text fill="WHITE" layoutX="16.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notices">
                      <font>
                         <Font name="Arial" size="22.0" />
                      </font>
@@ -35,9 +36,9 @@
             </Pane>
          </children>
       </Pane>
-      <AnchorPane layoutX="74.0" layoutY="132.0" prefHeight="225.0" prefWidth="546.0" style="-fx-background-color: #e4e4e4; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0); -fx-background-radius: 15;">
+      <AnchorPane layoutX="74.0" layoutY="133.0" prefHeight="225.0" prefWidth="546.0" style="-fx-background-color: #e4e4e4; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0); -fx-background-radius: 15;">
          <children>
-            <DatePicker fx:id="checkInDatePicker" layoutX="14.0" layoutY="179.0" promptText="Date de publication" />
+            <DatePicker fx:id="checkInDatePicker" layoutX="14.0" layoutY="179.0" promptText="Date of publication" />
             <TextArea fx:id="message" focusTraversable="false" layoutX="14.0" layoutY="14.0" prefHeight="157.0" prefWidth="521.0" promptText="Description" />
          </children>
       </AnchorPane>
@@ -45,19 +46,19 @@
          <children>
             <Pane prefHeight="40.0" prefWidth="49.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(220,225,225,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                <children>
-                  <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="11.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="34.0" fitWidth="64.0" layoutX="8.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <effect>
                         <DropShadow />
                      </effect>
                      <image>
-                        <Image url="@../static/PNG@2_white_icons/close%20%5B%231511%5D.png" />
+                        <Image url="@../static/PNG@2_white_icons/icons8_s_128px.png" />
                      </image>
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="64.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="64.0" onMouseClicked="#goHomeAdmin" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="13.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="13.0" layoutY="3.0" onMouseClicked="#goHomeAdmin" pickOnBounds="true" preserveRatio="true">
                      <effect>
                         <DropShadow />
                      </effect>
@@ -67,9 +68,9 @@
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="101.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="101.0" onMouseClicked="#goMainNoticeAdmin" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
-                  <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="5.0" onMouseClicked="#goMainNoticeAdmin" pickOnBounds="true" preserveRatio="true">
                      <effect>
                         <DropShadow />
                      </effect>
@@ -150,5 +151,18 @@
             <Image url="@../static/images/ss.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="562.0" layoutY="375.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../static/PNG@2_white_icons/icons8_add_48px.png" />
+         </image>
+      </ImageView>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="234.0" layoutY="53.0" prefHeight="22.0" prefWidth="164.0" style="-fx-background-color: #fff; -fx-background-radius: 8;" text="Add New Notice" textFill="#00154f">
+         <font>
+            <Font name="Arial" size="17.0" />
+         </font>
+         <effect>
+            <DropShadow color="#ff4007" />
+         </effect>
+      </Label>
    </children>
 </AnchorPane>
