--- a/src/main/resources/fxml/mainNoticeAdmin.fxml
+++ b/src/main/resources/fxml/mainNoticeAdmin.fxml
@@ -19,27 +19,27 @@
       <TableView fx:id="notice_admin_table" layoutX="88.0" layoutY="113.0" prefHeight="236.0" prefWidth="608.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
         <columns>
           <TableColumn fx:id="publication_date_col" prefWidth="96.0" text="Date" />
-          <TableColumn fx:id="title_col" prefWidth="136.0" text="Titre" />
-            <TableColumn fx:id="details_col" minWidth="0.0" prefWidth="375.0" text="Détails" />
+          <TableColumn fx:id="title_col" prefWidth="136.0" text="Title" />
+            <TableColumn fx:id="details_col" minWidth="0.0" prefWidth="375.0" text="Details" />
         </columns>
       </TableView>
       <Pane prefHeight="444.0" prefWidth="54.0" style="-fx-background-color: #00154f;">
          <children>
             <Pane prefHeight="40.0" prefWidth="54.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(220,225,225,0.8), 10, 0, 0, 0);" styleClass="panes" stylesheets="@../css/style.css">
                <children>
-                  <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="11.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="34.0" fitWidth="64.0" layoutX="10.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                      <effect>
                         <DropShadow />
                      </effect>
                      <image>
-                        <Image url="@../static/PNG@2_white_icons/close%20%5B%231511%5D.png" />
+                        <Image url="@../static/PNG@2_white_icons/icons8_s_128px.png" />
                      </image>
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="64.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="64.0" onMouseClicked="#goHomeAdmin" prefHeight="40.0" prefWidth="54.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="13.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="13.0" layoutY="3.0" onMouseClicked="#goHomeAdmin" pickOnBounds="true" preserveRatio="true">
                      <effect>
                         <DropShadow />
                      </effect>
@@ -49,9 +49,9 @@
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="101.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="101.0" onMouseClicked="#goMainNotice" prefHeight="40.0" prefWidth="54.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
-                  <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="5.0" onMouseClicked="#goMainNotice" pickOnBounds="true" preserveRatio="true">
                      <effect>
                         <DropShadow />
                      </effect>
@@ -61,7 +61,7 @@
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="142.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="142.0" prefHeight="40.0" prefWidth="54.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
                   <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                      <effect>
@@ -73,7 +73,7 @@
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="177.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="177.0" prefHeight="40.0" prefWidth="54.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
                   <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <effect>
@@ -85,7 +85,7 @@
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="210.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="210.0" prefHeight="40.0" prefWidth="54.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
                   <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                      <effect>
@@ -97,7 +97,7 @@
                   </ImageView>
                </children>
             </Pane>
-            <Pane layoutY="246.0" prefHeight="40.0" prefWidth="49.0" styleClass="bar-btn" stylesheets="@../css/style.css">
+            <Pane layoutY="246.0" prefHeight="40.0" prefWidth="54.0" styleClass="bar-btn" stylesheets="@../css/style.css">
                <children>
                   <ImageView fitHeight="30.0" fitWidth="23.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                      <effect>
@@ -127,23 +127,23 @@
             <DropShadow />
          </effect>
       </Pane>
-      <Pane layoutX="682.0" layoutY="11.0" prefHeight="60.0" prefWidth="40.0" style="-fx-background-color: b72801; -fx-background-radius: 8 0 0 8;" />
+      <Pane layoutX="682.0" layoutY="11.0" prefHeight="60.0" prefWidth="40.0" style="-fx-background-color: b72801; -fx-background-radius: 10 0 0 10;" />
       <Pane layoutX="613.0" layoutY="20.0" prefHeight="40.0" prefWidth="109.0" style="-fx-background-color: ff4007; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0); -fx-background-radius: 5 0 0 5;" styleClass="panes" stylesheets="@../css/style.css">
          <children>
-            <Text fill="WHITE" layoutX="32.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Avis">
+            <Text fill="WHITE" layoutX="18.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notices">
                <font>
                   <Font name="Arial" size="22.0" />
                </font>
             </Text>
          </children>
       </Pane>
-      <Line endX="185.0" layoutX="424.0" layoutY="39.0" startX="-374.3999938964844" startY="7.62939453125E-6" stroke="#ff4007" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-      <Button layoutX="330.0" layoutY="66.0" mnemonicParsing="false" onAction="#search" prefHeight="25.0" prefWidth="101.0" style="-fx-background-color: #00154f; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" text="   Rechercher" textFill="WHITE">
+      <Line endX="185.0" layoutX="427.0" layoutY="39.0" startX="-374.3999938964844" startY="7.62939453125E-6" stroke="#ff4007" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+      <Button layoutX="330.0" layoutY="66.0" mnemonicParsing="false" onAction="#search" prefHeight="30.0" prefWidth="78.0" style="-fx-background-color: #00154f; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" text="   Search" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="608.0" layoutY="400.0" mnemonicParsing="false" onAction="#goNotice" prefHeight="30.0" prefWidth="89.0" style="-fx-background-color: #0f0; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="   Nouveau" textFill="WHITE">
+      <Button layoutX="608.0" layoutY="400.0" mnemonicParsing="false" onAction="#goNoticeAdmin" prefHeight="30.0" prefWidth="89.0" style="-fx-background-color: #0f0; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,255,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="   Add New" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -153,12 +153,12 @@
             <Image url="@../static/images/ss.png" />
          </image>
       </ImageView>
-      <Button fx:id="delete_btn" layoutX="398.0" layoutY="400.0" mnemonicParsing="false" onAction="#delete" prefHeight="30.0" prefWidth="92.0" style="-fx-background-color: #f00; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="  Supprimer" textFill="WHITE">
+      <Button fx:id="delete_btn" layoutX="398.0" layoutY="400.0" mnemonicParsing="false" onAction="#delete" prefHeight="30.0" prefWidth="92.0" style="-fx-background-color: #f00; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(255,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="  Delete" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="505.0" layoutY="400.0" mnemonicParsing="false" onAction="#updateNotice" prefHeight="30.0" prefWidth="89.0" style="-fx-background-color: #00154f; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="   Modifier" textFill="WHITE">
+      <Button layoutX="505.0" layoutY="400.0" mnemonicParsing="false" onAction="#updateNotice" prefHeight="30.0" prefWidth="89.0" style="-fx-background-color: #00154f; -fx-background-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" styleClass="login-btn" stylesheets="@../css/style.css" text="   Update" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -173,26 +173,26 @@
             <Image url="@../static/PNG@2_white_icons/icons8_Update_Left_Rotation_100px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="399.0" layoutY="405.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="403.0" layoutY="405.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../static/PNG@2_white_icons/icons8_delete_48px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="332.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="18.0" fitWidth="18.0" layoutX="333.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../static/PNG@2_white_icons/icons8_search_52px.png" />
          </image>
       </ImageView>
-      <Label layoutX="367.0" layoutY="359.0" prefHeight="30.0" prefWidth="335.0" text="  Séléctionnez une annonce avant 'Supprimer' ou 'Modifier' !" textFill="#ff370af5">
+      <Label layoutX="468.0" layoutY="359.0" prefHeight="30.0" prefWidth="234.0" text="  Select a notice before 'Delete' or 'Update'" textFill="#ff370af5">
          <font>
             <Font name="Arial" size="12.0" />
          </font>
       </Label>
-      <ImageView fitHeight="23.0" fitWidth="18.0" layoutX="352.0" layoutY="366.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="23.0" fitWidth="18.0" layoutX="453.0" layoutY="366.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../static/PNG@2_white_icons/icons8_attention_60px.png" />
          </image>
       </ImageView>
-      <TextField fx:id="pub_by_title" layoutX="88.0" layoutY="66.0" prefHeight="30.0" prefWidth="234.0" promptText=" Le titre de l'annonce à chercher..." style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+      <TextField fx:id="pub_by_title" layoutX="88.0" layoutY="66.0" prefHeight="30.0" prefWidth="234.0" promptText="Title of the notice tos earch..." style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
    </children>
 </AnchorPane>
