--- a/src/main/resources/fxml/LoginAdmin.fxml
+++ b/src/main/resources/fxml/LoginAdmin.fxml
@@ -1,15 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -28,7 +18,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="450.0" minWidth="700.0" prefHeight="700.0" prefWidth="1350.0" style="-fx-background-color: #ccc;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.LoginAdminController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="450.0" minWidth="700.0" prefHeight="700.0" prefWidth="1350.0" style="-fx-background-color: #ccc;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ensa.SmartSchool.controller.LoginAdminController">
    <children>
       <HBox alignment="CENTER" layoutX="7.0" layoutY="110.0" prefHeight="471.0" prefWidth="1342.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="1.0">
          <children>
@@ -64,7 +54,7 @@
                         <Font size="14.0" />
                      </font>
                   </PasswordField>
-                  <Hyperlink focusTraversable="false" layoutX="90.0" layoutY="312.0" prefHeight="19.0" prefWidth="114.0" styleClass="hyperlien" stylesheets="@../css/style.css" text="Forgot password ?" textFill="WHITE" underline="true" />
+                  <Hyperlink focusTraversable="false" layoutX="90.0" layoutY="312.0" onAction="#forgetPassword" prefHeight="19.0" prefWidth="114.0" styleClass="hyperlien" stylesheets="@../css/style.css" text="Forgot password ?" textFill="WHITE" underline="true" />
                   <Line endX="155.0" layoutX="155.0" layoutY="154.0" startX="-100.0" stroke="#ff4007" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0) dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
                   <ImageView fitHeight="25.0" fitWidth="21.0" layoutX="51.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true">
                      <image>
